:water_buffalo: made introduce :water_buffalo:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.FullScreen">
 
-        <activity android:name=".activity.MainActivity">
+        <activity android:name="me.sungbin.portfolio.ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -20,7 +20,7 @@
 
         <activity
             android:theme="@style/AppTheme.WhiteStatusBar"
-            android:name=".activity.ContentActivity" />
+            android:name="me.sungbin.portfolio.ui.activity.ContentActivity" />
 
         <meta-data
             android:name="com.samsung.android.icon_container.has_icon_container"
